[package]
name = "holani-min"
version = "0.9.6"
edition = "2021"

[dependencies]
holani = { git = "https://github.com/LLeny/holani.git", rev = "fd8126d5cfcab70c5abb9d6b08ed83d2b8b642b2" }
macroquad = "0.4"
env_logger = { version = "0.11.5", default-features = false, features = [
  "auto-color",
  "humantime",
] }
log = { version = "0.4", features = [
  "max_level_trace",
  "release_max_level_warn",
] }
kanal = { git = "https://github.com/fereidani/kanal.git", rev = "125fb7876797f20c632b25660c2f41c2908f9007" }
rodio = "0.20"
clap = { version = "4.5", features = ["derive"] }
thread-priority = "1.2.0"

[features]
default = ["holani/comlynx_shared_memory"]
comlynx_external = ["holani/comlynx_external"]

[profile.release]
codegen-units = 1
lto = "fat"