[package]
name = "holani-min"
version = "0.9.8"
rust-version = "1.84"
edition = "2021"

[dependencies]
holani = { git = "https://github.com/LLeny/holani.git", tag = "0.9.8" }
macroquad = "0.4.14"
env_logger = { version = "0.11.8", default-features = false, features = [
  "auto-color",
  "humantime",
] }
log = { version = "0.4.28", features = [
  "max_level_trace",
  "release_max_level_warn",
] }
kanal = { git = "https://github.com/fereidani/kanal.git", rev = "9a4b98d570258410fa07c5329e3c4499533b1e92" }
rodio = { version = "0.21.1", default-features = false, features = ["playback"] }
dasp_sample = "0.11.0"
ringbuf = "0.4.8"
clap = { version = "4.5.53", features = ["derive"] }
thread-priority = "3.0.0"

[features]
default = ["holani/comlynx_shared_memory"]
comlynx_external = ["holani/comlynx_external"]

[profile.release]
codegen-units = 1
lto = "fat"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"